kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.35.17
spec:
  hostnames:
    - hubble.68cc.io
  parentRefs:
    - name: traefik-internal-gateway
      namespace: network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-auth
      backendRefs:
        - name: hubble-ui
          port: 80
          namespace: kube-system
      matches:
        - path:
            type: PathPrefix
            value: /
